Add events stats endpoint and caching
